Pieuvre/tests/Proofs/ShouldFail/notassumption.8pus
Goal A -> (A -> B) -> B.
intros.
assumption.
Qed.
